# FastapiDemo

./: .gitignore  README.md  pyproject.toml
migrations/models/: 0_20250818162929_init.py  0_20250928012028_init.py  0_20251002010556_init.py  1_20250903205441_update.py  1_20250929234451_add_role.py  1_20251002010843_add_role.py  2_20250930000339_add_role.py  2_20251002012508_add_role.py  3_20250930010236_add_role.py
src/: .env  lifespan.py  main.py
src/api/: auth_api.py  deps.py  user_api.py
src/core/: security.py  settings.py
src/databases/: mysql_session.py  redis_session.py
src/models/: UserModel.py  UserSchema.py
src/models/permission/: PermissionModel.py
src/models/role/: RoleModel.py
src/models/system/: ResponseSchema.py
src/models/user/: UserModel.py  UserSchema.py
src/static/: swagger-ui-bundle.js  swagger-ui.css
